# AutoGPT

.github/workflows/: classic-autogpts-ci.yml  classic-frontend-ci.yml  claude.yml  jekyll-gh-pages.yml  nextjs.yml  platform-autgpt-deploy-prod.yml  platform-autogpt-deploy-dev.yaml  platform-backend-ci.yml  platform-frontend-ci.yml  static.yml
autogpt_platform/autogpt_libs/: pyproject.toml
autogpt_platform/backend/: pyproject.toml
autogpt_platform/backend/backend/util/: settings.py
autogpt_platform/frontend/: package.json  pnpm-lock.yaml
autogpt_platform/frontend/src/components/integrations/: credentials-input.tsx
autogpt_platform/frontend/src/lib/autogpt-server-api/: types.ts
autogpt_platform/market/: pyproject.toml
classic/benchmark/: pyproject.toml
docs/: requirements.txt
