[tool.poetry]
name = "autogpt-libs"
version = "0.2.0"
description = "Shared libraries across NextGen AutoGPT"
authors = ["Aarushi <aarushik93@gmail.com>"]
readme = "README.md"
packages = [{ include = "autogpt_libs" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
colorama = "^0.4.6"
expiringdict = "^1.2.2"
google-cloud-logging = "^3.13.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
pyjwt = "^2.10.1"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.15.1"
supabase = "^2.27.2"
launchdarkly-server-sdk = "^9.14.1"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"

[tool.poetry.group.dev.dependencies]
redis = "^5.2.1"
ruff = "^0.11.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]  # sort dependencies
